Remove CanonicalAddressWithResidency and migrate dates into CanonicalAddress Update CanonicalAddress to contain new ValidFrom and ValidUntil dates Update model from ThoroughfareName to StreetName as per Schema
